# Eva

./: banco_de_dados.py  dados.db  main.py  pyproject.toml  translate.py  uteis.py
